fix(AvatarSelector): set avatar change and remove buttons z-index

--- a/src/components/AvatarSelector/AvatarSelector.css
+++ b/src/components/AvatarSelector/AvatarSelector.css
@@ -29,10 +29,12 @@
 }
 
 .avatar {
-  cursor: pointer;
+  position: relative;
+  z-index: 0;
 }
 
 .avatarChanger {
+  z-index: 1;
   position: absolute;
   right: 6px;
   bottom: 6px;
@@ -55,6 +57,7 @@
 
 .avatarRemove {
   position: absolute;
+  z-index: 1;
   right: 10px;
   top: 6px;
   cursor: pointer;
